McStas-2.5_CPU_MPICC/Test_Pol_Bender/compile_stdout.txt
INFO: No output directory specified (--dir)
INFO: Using directory: "Test_Pol_Bender_20200225_210624"
INFO: Regenerating c-file: Test_Pol_Bender.c
Warning: Using DEFINITION parameter of component Pol_bender() (potential syntax error) at line /zhome/89/0/38697/once/McStas-2.5_CPU_MPICC/Test_Pol_Bender/Test_Pol_Bender.instr:101
  rTopUpPar={ 0.99 , 0.0219 , 6.07 , 3.0 , 0.003 }
Warning: Using DEFINITION parameter of component Pol_bender() (potential syntax error) at line /zhome/89/0/38697/once/McStas-2.5_CPU_MPICC/Test_Pol_Bender/Test_Pol_Bender.instr:101
  rTopDownPar={ 0.99 , 0.0219 , 6.07 , 2.0 , 0.003 }
CFLAGS=
INFO: Recompiling: ./Test_Pol_Bender.out
/zhome/89/0/38697/McStas/mcstas/2.5/tools/Python/mcrun/../mccodelib/../../../optics/Pol_bender.comp:140:19: warning: ISO C99 requires whitespace after the macro name
 %{
                   ^
INFO: ===
[n-62-23-14:07720] mca_base_component_repository_open: unable to open mca_plm_lsf: libbat.so: cannot open shared object file: No such file or directory (ignored)
[n-62-23-14:07720] mca_base_component_repository_open: unable to open mca_ras_lsf: libbat.so: cannot open shared object file: No such file or directory (ignored)
[1582661188.370757] [n-62-23-14:7719 :0]         sys.c:744  MXM  WARN  Conflicting CPU frequencies detected, using: 3292.02
[1582661188.372238] [n-62-23-14:7719 :0]      ib_dev.c:533  MXM  WARN  failed call to ibv_exp_use_priv_env(): Function not implemented
[1582661188.372242] [n-62-23-14:7719 :0]      ib_dev.c:544  MXM  ERROR ibv_query_device() returned 38: Function not implemented
--------------------------------------------------------------------------
Initialization of MXM library failed.

  Error: Input/output error

--------------------------------------------------------------------------
[1582661188.374986] [n-62-23-14:7719 :0]      ib_dev.c:533  MXM  WARN  failed call to ibv_exp_use_priv_env(): Function not implemented
[1582661188.374989] [n-62-23-14:7719 :0]      ib_dev.c:544  MXM  ERROR ibv_query_device() returned 38: Function not implemented
begin instrument: Test_Pol_Bender
  Creator: McStas 2.5 - Feb. 24, 2020
  Source: /zhome/89/0/38697/once/McStas-2.5_CPU_MPICC/Test_Pol_Bender/Test_Pol_Bender.instr
  Parameters:  GUIDELENGTH(double) GUIDERADIUS(double) ENDOPTION(int) NSLITS(int) WSPACER(double) DRAWOPTION(int)
  Trace_enabled: yes
  Default_main: yes
  Embedded_runtime: yes
end instrument
begin simulation: .
  Format: McStas
  URL: http://www.mccode.org
  Creator: McStas 2.5 - Feb. 24, 2020
  Instrument: /zhome/89/0/38697/once/McStas-2.5_CPU_MPICC/Test_Pol_Bender/Test_Pol_Bender.instr
  Ncount: 1000000
  Trace: no
  Gravitation: no
  Seed: 1582668907
  Directory: .
  Param: GUIDELENGTH=1
  Param: GUIDERADIUS=10
  Param: ENDOPTION=0
  Param: NSLITS=5
  Param: WSPACER=0.005
  Param: DRAWOPTION=1
end simulation
info!
